# META-SHARE

./: .coveragerc  .gitignore  .travis.yml  LICENSE  NOTICE  README.md  install-dependencies.sh  manage.py  requirements.txt  run-tests-4-jenkins.sh  run-tests.sh  set_up_django.py
installable-packages/: .gitignore
metashare/: ELRA_import_elra_lrs.py  ELRA_update_elra_prices.py  ERROR  __init__.py  call_south_migration_scripts.py  create_secret_key.py  cron.py  export_xml.py  haystack_routers.py  import_fixtures.py  import_xml.py  initial_data.test.json  lighttpd-ssl.conf.sample  lighttpd.conf.sample  local_settings.sample  local_settings.test  manage.py  restore.py  run-synchronization.sh  settings.py  sitemap.py  south_settings.py  start-server.sh  start-solr-win.sh  start-solr.sh  stop-server.sh  stop-solr-win.sh  stop-solr.sh  storage_admin.py  synchronise.py  test.html  test_runner.py  test_utils.py  update_digests.py  urls.py  utils.py  views.py  wsgi.py  xml_utils.py
metashare/AdminTest/: admin.py  admin2.py  models.py  settings.py  test1.py  urls.py
metashare/accounts/: admin.py  auth.py  forms.py  models.py  tests.py  urls.py  views.py
metashare/apache/: metashare.wsgi
metashare/bcp47/: __init__.py  bcp47.py  convert.xslt  iana.py  language-subtag-registry-min3.xml  language-subtag-registry-min4.xml  language-subtag-registry.xml  tests.py  urls.py  views.py  xhr.py
metashare/fixtures/: initial_data.json
metashare/log/: metashare.log.1  metashare.log.2  metashare.log.3  metashare.log.4  metashare.log.5
metashare/media/: metashare.css  tooltip.css
metashare/multitest/: README  local_settings_test.py  loop.sh  mconfig.py  settings_test.py  start_all.sh  start_instance.sh
metashare/oai_pmh/: __init__.py  _metadatareader.py  _utils.py
metashare/portal/: index.html
metashare/recommendations/: models.py  recommendations.py  tests.py
metashare/repo2/: admin.py  fields.py  forms.py  model_utils.py  models.py  search_indexes.py  supermodel.py  urls.py  views.py
metashare/repository/: __init__.py  admin.py  fields.py  forms.py  languages.py  model_utils.py  models.py  search_fields.py  search_indexes.py  signals.py  sitemap.py  supermodel.py  urls.py  validators.py  views.py
metashare/stats/: __init__.py  geoip.py  model_utils.py  models.py  recommendations.py  tests.py  urls.py  views.py
metashare/storage/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
metashare/sync/: __init__.py  cron.py  sync_utils.py  tests.py  urls.py  views.py
metashare/templates/: 404.html  500.html  base.html  breadcrumbs.html  footer.html  frontpage.html  header.html  login.html  metashare-info.html  robots.txt
metashare/test-config/: pylint-eclipse.rc  pylint.rc
misc/docs/: META-SHARE_Installation_Manual.docx  META-SHARE_Installation_Manual.rst  META-SHARE_Provider_Manual.odt  META-SHARE_Provider_Manual.rst  META-SHARE_User_Manual.doc  META-SHARE_User_Manual.rst  META-SHARE_v2.1_Provider_Manual.odt  META-SHARE_v2_Installation_Manual.docx  META-SHARE_v2_Provider_Manual.docx  META-SHARE_v2_Provider_Manual.odt  META-SHARE_v2_User_Manual.doc  META-SHARE_v2_User_Manual.docx  Makefile  README.txt  conf.py  index.rst  make.bat
misc/multitest/: README  _django.sh  _fset.sh  _sync.sh  check_fset.py  create_db.sh  create_solr_schema.sh  fset.py  get_node_count.py  mconfig.py  mserv.sh  setvars.sh  test_core_data.py  test_del_s.sh  test_import.sh  test_sync.py  test_sync_all.sh  test_sync_del.sh  test_sync_ic.sh  test_sync_outer.sh  unit_tests.sh  unit_tests_1.sh  unit_tests_2.sh  unit_tests_3.sh  unit_tests_4.sh  unit_tests_5.sh
misc/portal/: index.html
misc/solr-config-sample/: create_solr_config.sh  solrconfig.xml
misc/ssl-config/: _conf.sh  _django.sh  gen_light_conf.sh  lighttpd-ssl.conf  lighttpd-ssl.conf.sample  start-server.sh
misc/test-ci/: autoupdate-docs.sh  initial_data.test.json  local_settings.test_local  (+5 more)
misc/tools/xdiff-src/: Makefile.am  Makefile.in  Makefile.manual  README  XDiff.cpp  XDiff.hpp  XHash.cpp  XHash.hpp  XLut.cpp  XLut.hpp  XParser.cpp  XParser.hpp  XTree.cpp  XTree.hpp  aclocal.m4  configure  configure.ac  xdiff-config.h.in
misc/tools/xdiff-src/m4/: ax_lib_icu.m4
(+7315 files in other folders)
